--- a/diseno-web.html
+++ b/diseno-web.html
@@ -333,25 +333,68 @@
         </div>
         <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
-                <div class="row clearfix">
-                    <div class="col-lg-5">
-                        <div class="heading-block topmargin">
-                            <h2 class="texto-verde">Diseño de Páginas web</h2>
+                <div class="heading-block center">
+                    <h2 class="texto-verde">Tenemos todo tipo de <strong>servicios</strong> para ti.</h2>
+                </div>
+                <div class="row topmargin">
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <a href="#"><i class="icon-play"></i></a>
+                            </div>
+                            <h3>HTML5 Video</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
-                        <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                            <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
-                        </a>
                     </div>
-                    <div class="col-lg-7 bottommargin">
-                        <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                            <img src="images/main-fbrowser.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
-                            <img src="images/main-fmobile.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="400" alt="iPad">
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <a href="#"><i class="icon-play"></i></a>
+                            </div>
+                            <h3>HTML5 Video</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <a href="#"><i class="icon-play"></i></a>
+                            </div>
+                            <h3>HTML5 Video</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
                 </div>
-                <div class="container clearfix" style="margin-top: 100px">
+                <div class="row my-5">
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <a href="#"><i class="icon-play"></i></a>
+                            </div>
+                            <h3>HTML5 Video</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <a href="#"><i class="icon-play"></i></a>
+                            </div>
+                            <h3>HTML5 Video</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <a href="#"><i class="icon-play"></i></a>
+                            </div>
+                            <h3>HTML5 Video</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row clearfix" style="margin-top: 100px;">
                     <div class="col_one_fourth nobottommargin center bounceIn animated" data-animate="bounceIn">
                         <i class="i-plain i-xlarge divcenter nobottommargin icon-code texto-verde"></i>
                         <div class="counter counter-lined">
@@ -380,26 +423,7 @@
                         </div>
                         <h5 class="t700">Hours of Coding</h5>
                     </div>
-                </div>
-                <div class="line"></div>
-                <div class="row clearfix">
-                    <div class="col-lg-7 bottommargin">
-                        <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                            <img src="images/main-fbrowser.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
-                            <img src="images/main-fmobile.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="400" alt="iPad">
-                        </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="heading-block topmargin">
-                            <h2 class="texto-verde">eCommerce</h2>
-                        </div>
-                        <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                            <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
-                        </a>
-                    </div>
-                </div>
+                </div>   
             </div>
         </div>
     </section>
